feat: 角色创建改用 ModifierChain 注册职业加成
重写 action.confirm_character 处理器：先添加 stat 组件并调用 setBase()
快照基础状态，再通过 addModifier() 注册职业加成，添加 EquipmentSlots/
Inventory/Experience 组件。同时修复 Component.getAll() 使用 Map.copyOf()
不支持 null 值导致 PolyglotException 的问题，改用 unmodifiableMap。

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>